[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/Tiles01.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MainNode.gd" type="Script" id=2]
[ext_resource path="res://Scripts/rotate_sprite.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Kineticball.tscn" type="PackedScene" id=5]

[node name="MainNode" type="Node2D"]
position = Vector2( 560, 384 )
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 448, 208 )
__meta__ = {
"_edit_group_": true
}

[node name="Player_label" type="Label" parent="Player"]
margin_left = -32.0
margin_top = -48.0
margin_right = 32.0
margin_bottom = -34.0
text = "Bonjour "
align = 1

[node name="Shell" type="Sprite" parent="Player"]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 50, 30 )
hframes = 2
vframes = 3
frame = 1
script = ExtResource( 3 )

[node name="Kineticball" parent="." instance=ExtResource( 5 )]
position = Vector2( -112, -32 )
linear_velocity = Vector2( 0, 0 )
Bounce_Coeff = 0.929
Linear_Coeff = -0.274

[node name="Walls" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
polygon = PoolVector2Array( -560, 304, -560, -384, 656, -384, 656, 304, 512, 304, 512, -304, -512, -304, -512, 304 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Walls"]
polygon = PoolVector2Array( -560, 336, -560, 304, 656, 304, 656, 336 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
__meta__ = {
"_edit_group_": true
}

[node name="DebugHUD" type="Label" parent="Camera2D"]
margin_left = -496.0
margin_top = -288.0
margin_right = -320.0
margin_bottom = -192.0

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D"]
margin_left = -128.0
margin_top = 231.0
margin_right = 166.0
margin_bottom = 271.0
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="Camera2D/HBoxContainer"]
margin_right = 105.0
margin_bottom = 40.0
text = "Initial Position"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Camera2D/HBoxContainer"]
margin_left = 109.0
margin_right = 196.0
margin_bottom = 40.0
text = "Debug HUD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Camera2D/HBoxContainer"]
margin_left = 200.0
margin_right = 294.0
margin_bottom = 40.0
text = "Spawn Items"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedSlider" type="HSlider" parent="Camera2D"]
margin_left = -80.0
margin_top = 272.0
margin_right = 124.0
margin_bottom = 288.0
max_value = 20.0
value = 10.0

[connection signal="pressed" from="Camera2D/HBoxContainer/Button" to="." method="InitialPose_button"]
[connection signal="pressed" from="Camera2D/HBoxContainer/Button2" to="." method="Debug_pressed"]
[connection signal="pressed" from="Camera2D/HBoxContainer/Button3" to="." method="SpawnItem_pressed"]
